[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
solana-program = "1.16.1"
spl-associated-token-account = {version = "1.1.3", features  = ["no-entrypoint"]}
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}


[lib]
name = "hello_world"
crate-type = ["cdylib", "lib"]
